# docker_compose_network_postgres_streamlit

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  init_db.py
